--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,8 @@ a {
 }
 
 ul {
+    margin: 0;
+    padding: 0;
     list-style: none;
 }
 
@@ -41,6 +43,18 @@ ul {
 
 .accent {
     color: var(--accent-color);
+}
+
+.header {
+    border-bottom: 1px;
+    border-color: #ececec;
+}
+
+.countainer {
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
 }
 
 .logo {
@@ -87,14 +101,16 @@ ul {
 }
 
 .hero {
+    text-align: center;
     background-color: var(--herofooter-bg-color);
 }
 
 .hero-title {
+    margin-top: 0;
+    margin-bottom: 30px;
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
-    text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: var(--primary-white-color);
@@ -121,6 +137,8 @@ ul {
 }
 
 .peculiarities .title {
+    margin-top: 0;
+    margin-bottom: 10px;
     font-size: 14px;
     line-height: 1.14;
     text-transform: uppercase;
@@ -128,12 +146,16 @@ ul {
 }
 
 .text {
+    margin-top: 0;
+    margin-bottom: 0;
     font-size: 14px;
     line-height: 1.71;
 }
 
 .section-title,
 .team-title {
+    margin-top: 0;
+    margin-bottom: 50px;
     font-size: 36px;
     line-height: 1.17;
     text-align: center;
@@ -145,6 +167,8 @@ background-color: var(--secondary-white-color);
 }
 
 .work-list .title {
+    margin-top: 30px;
+    margin-bottom: 10px;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
@@ -152,6 +176,8 @@ background-color: var(--secondary-white-color);
 }
 
 .team-text {
+    margin-top: 0;
+    margin-bottom: 0;
     font-size: 16px;
     line-height: 1.19;
 }
@@ -177,6 +203,8 @@ background-color: var(--secondary-white-color);
 /* Стили портфолио */
 
 .button-potrf {
+    margin-top: 0;
+    margin-bottom: 50px;
     font-family: inherit;
     font-weight: 500;
     font-size: 16px;
@@ -198,6 +226,8 @@ background-color: var(--secondary-white-color);
 }
 
 .content .title {
+    margin-top: 20px;
+    margin-bottom: 4px;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
@@ -205,6 +235,8 @@ background-color: var(--secondary-white-color);
 }
 
 .context {
+    margin-top: 0;
+    margin-bottom: 0;
     font-size: 16px;
     line-height: 1.88;
 }
