--- a/css/styles.css
+++ b/css/styles.css
@@ -18,14 +18,30 @@ body {
     background-color: var(--primary-white-color);
 }
 
+html {
+    box-sizing: border-box;
+}
+
+*,
+*::after,
+*::before {
+    box-sizing: inherit;
+}
+
 a {
     text-decoration: none;
+    color: inherit;
 }
 
 ul {
     margin: 0;
     padding: 0;
     list-style: none;
+}
+
+.section {
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
 
 .visually-hidden {
@@ -46,11 +62,10 @@ ul {
 }
 
 .header {
-    border-bottom: 1px;
-    border-color: #ececec;
+    outline: 1px solid #ececec;
 }
 
-.countainer {
+.container {
     width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
@@ -117,6 +132,8 @@ ul {
 }
 
 .contacts .link {
+    padding-top: 32px;
+    padding-bottom: 32px;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -135,15 +152,17 @@ img {
 }
 
 .hero {
-    padding-bottom: 200px;
+    padding: 200px 0;
     text-align: center;
     background-color: var(--herofooter-bg-color);
 }
 
 .hero-title {
+    width: 696px;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 0;
     margin-bottom: 30px;
-    padding-top: 200px;
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
@@ -172,14 +191,12 @@ img {
     background-color: var(--button-hover-color);
 }
 
-.section {
-    padding-top: 94px;
-    padding-bottom: 94px;
-}
-
 .peculiarities {
     display: flex;
-    width: 270;
+}
+
+.peculiarities .item {
+    width: 270px;
 }
 
 .peculiarities .item + .item {
@@ -239,6 +256,11 @@ img {
     flex-basis: calc(100% / 4 - 30px);
     margin-left: 30px;
     margin-top: 30px;
+    background-color: var(--primary-white-color);
+    /* material shadow v1 */
+
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
 }
 
 .card-content {
@@ -291,6 +313,7 @@ img {
 .button-menu {
     display: flex;
     justify-content: center;
+    margin-bottom: 50px;
 }
 
 .button-menu .item + .item {
@@ -299,7 +322,6 @@ img {
 
 .button-potrf {
     margin-top: 0;
-    margin-bottom: 50px;
     font-family: inherit;
     font-weight: 500;
     font-size: 16px;
@@ -347,6 +369,8 @@ img {
     flex-basis: calc(100% / 3 - 30px);
     margin-left: 30px;
     margin-top: 30px;
+    background-color: var(--primary-white-color);
+    border: 1px solid #eeeeee;
 }
 
 .card-context {
